tests/__snapshots__/validation-semantic-errors-test-level-errors-stderr.snap.txt
Error: Type 'boolean' is not assignable to type 'string'. ts(2322)

  14 | 
  15 | test("reported type error?", () => {
  16 |   a = false;
     |   ~
  17 | 
  18 |   expect<string>().type.toBe<string>();
  19 | });

       at ./__typetests__/test-level.tst.ts:16:3

